<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">High Priority</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="heading">Task Menu</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="categiry_title">Category Title</string>
    <string name="task_title">Task Title</string>
    <string name="description">description/notes</string>
    <string name="textwhite">#FFFFFF</string>
    <string name="whitetext">#FFFFFF</string>
    <string name="new_categorybubble">New Category</string>
    <string name="newtask">New Task</string>
    <string name="new_taskbubble">New Task</string>
    <string name="time">Enter Time</string>
    <string name="priority">Enter Priority</string>
    <string name="getheight">Get Height</string>
    <string name="tap">Tap Screen to Start</string>
    <string name="duedate">Due in 3 days</string>
    <string name="edit_task">Edit Task</string>
    <string name="highpriority">High Priority</string>
    <string name="mediumpriority">Medium Priority</string>
    <string name="presesntation">Project Presentation</string>
    <string name="today">Today at 6:30pm</string>
    <string name="dressup">Dress up!</string>
    <string name="slides">Have slides ready</string>
    <string name="edit_category">Edit Category</string>
    <string name="randomtech">RandomTech</string>
    <string name="app_logo">App Logo</string>
    <string name="dynamic_background">Dynamic Background</string>
    <string name="company_name">Random Tech</string>

</resources>
