<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#99000000"
    android:fadingEdge="horizontal"
    android:fadingEdgeLength="@dimen/five"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#99000000"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleCategoryView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight=".2"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/new_categorybubble"
            android:textColor="#F0F0F0"
            android:textSize="@dimen/twentyfour" />

        <EditText
              android:id="@+id/categoryTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:ems="10"
            android:hint="@string/categiry_title"
            android:textColorHint="#909090"  />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linegrey" />

        <RadioGroup
            android:id="@+id/categoryPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioCHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/high_priority"
                android:textColor="#F0F0F0" />

            <RadioButton
                android:id="@+id/radioCMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_priority"
                android:textColor="#F0F0F0" />

            <RadioButton
                android:id="@+id/radioCLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_priority"
                android:textColor="#F0F0F0" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linegrey" />

        <HorizontalScrollView
            android:id="@+id/categoryScrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:fadingEdge="none"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/addCategoryBubble"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addpbubble" />

                <Button
                    android:id="@+id/addToDoCategory"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addmbubble" />

                <Button
                    android:id="@+id/categoryBubble1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addlbbubble" />

                <Button
                    android:id="@+id/categoryBubble2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addcbubble" />

                <Button
                    android:id="@+id/categoryBubble3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addgbubble" />

                <Button
                    android:id="@+id/categoryBubble4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/addgrebubble" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linegrey" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:gravity="center_vertical|center_horizontal"
            android:scrollbars="none" >

            <Button
                android:id="@+id/saveCategoryBubble"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/savebubble" />

            <Button
                android:id="@+id/cancleCategoryBubble"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/cancelmbubble" />

        </TableRow>
    </LinearLayout>

</LinearLayout>